--- a/src/Login/Login.css
+++ b/src/Login/Login.css
@@ -9,7 +9,7 @@
   padding: 2rem;
   min-height: 100vh;
   gap: 2rem;
-  background-color: #e9ecf2;
+  background-color: #ffffff;
 }
 
 /* start section 1 */
@@ -146,7 +146,7 @@
 }
 
 .logo-title {
-  width: 413px;
+  width: 390px;
 }
 /* end section 2 */
 
