--- a/src/Login/Login.css
+++ b/src/Login/Login.css
@@ -102,6 +102,7 @@
   -ms-border-radius: 8px;
   -o-border-radius: 8px;
   margin-top: 16px !important;
+  margin-bottom: 28px !important;
 }
 
 .btn-primary:hover {
